# mal-rust

./: .gitignore  Cargo.toml  Readme.md  run.sh  test.sh
mal/: Readme.md
mal/process/: step0_repl.txt
mal/tests/: step6_file.mal
src/: core.rs  env.rs  lib.rs  main.rs  printer.rs  reader.rs  types.rs
