[package]
name = "mal_rust"
version = "0.1.0"
authors = ["Tyler Goodwin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
rustyline = "6.0.0"

[[bin]]
name = "step0_repl"
path = "src/bin/step0_repl.rs"

[[bin]]
name = "step1_read_print"
path = "src/bin/step1_read_print.rs"

[[bin]]
name = "step2_eval"
path = "src/bin/step2_eval.rs"

[[bin]]
name = "step3_env"
path = "src/bin/step3_env.rs"

[[bin]]
name = "step4_if_fn_do"
path = "src/bin/step4_if_fn_do.rs"

[[bin]]
name = "step5_tco"
path = "src/bin/step5_tco.rs"

[[bin]]
name = "step6_file"
path = "src/bin/step6_file.rs"